k8s-rewrite/charts/media-stack/tautulli/service.yaml
# Tautulli Service
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: plex
spec:
  type: ClusterIP
  ports:
  - port: 8181
    targetPort: 8181
    name: http
  selector:
    app: tautulli
